Adding new examples (#50)